--- a/hobbies.html
+++ b/hobbies.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Hobbies</title>
-  </head>
-  <body>
-    <h3>My Hobbies</h3>
-    <ol>
-      <li>Code</li>
-      <li>drinking coffee</li>
-      <li>trecking</li>
-    </ol>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>My Hobbies</title>
+</head>
+
+<body>
+  <h1>My Hobbies </h1>
+  <ol>
+    <li>Code</li>
+    <li>Coffee</li>
+    <li>running</li>
+  </ol>
+</body>
+
 </html>
