--- a/index.html
+++ b/index.html
@@ -3,69 +3,62 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Jairo's personal site </title>
+  <title>Jairo's personal site</title>
 </head>
 
 <body>
-  <table cellspacing = 20>
+  <table>
     <tr>
-      <td><img src="https://scontent.fbnu4-1.fna.fbcdn.net/v/t1.0-1/p160x160/47018859_1899124020195635_8964941578321788928_n.jpg?_nc_cat=102&_nc_ht=scontent.fbnu4-1.fna&oh=0d0c3251ec253db9861af002bc6110c4&oe=5CC5CB6F" alt="Jairo's profile picture">
+      <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQFVYhSu_lol3tFHbvq0uiBbG3x9YJxcCPUP2jRx7EsTQ&usqp=CAU&ec=45695923" alt="jairo peeralta vega"></td>
+      <td>
+        <h1><a href="https://www.linkedin.com/in/jairoperaltavega/">Jairo Peralta Vega</a></h1>
+        <p><em>Digital marekting specialist, SEO lover and Support Engineer</em></p>
+        <p>I am currently working as tech support @ Duda</p>
       </td>
-      <td> <h1> Jairo Peralta Vega </h1>  <p><em>Implamatation success manager</em> at <a href="https://www.rdstation.com"><strong>RD Station</strong></a> </p>
-        <p>International business professional with more than 3 years expirence in Marketing and logitics in different industries</p></td>
     </tr>
   </table>
   <hr>
-  <h3>Education</h3>
+  <h3>Books and Teachings</h3>
   <ul>
-    <li>International business</li>
-    <ul>
-      <li><em>Enfasis in logistics and Marketing</em></li>
-    </ul>
-    <li>New content and online advertising</li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table  cellspacing = 10>
-      <thead>
-        <tr>
-          <th>dates</th>
-          <th>work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2015</td>
-          <td>Growth Hacker at Cosmo invação</td>
-        </tr>
-        <tr>
-          <td>2018 - current</td>
-          <td>Implementation success manager</td>
-      </tbody>
+    <li>how to make friends and influence people</li>
+    <li>Winning By Design</li>
+    <li>App Brewery - Bootcamp</li>
+  </ul>
+  <hr>
+  <h3>Work Experience</h3>
+  <tablecellspacing=10>
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
       </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2018-2020</td>
+        <td>CSM at RD Station</td>
+      </tr>
+      <tr>
+        <td>2020</td>
+        <td>Customer Support at Duda</td>
+      </tr>
+    </tbody>
     </table>
     <hr>
     <h3>Skills</h3>
-<table cellspacing =10>
-        <tr>
-          <td>Web development</td>
-          <td>🟊🟊🟊</td>
-        </tr>
-        <tr>
-          <td>Inbound Marketing</td>
-          <td>🟊🟊🟊🟊🟊</td>
-          <tr>
-            <td>Marketing Automation </td>
-            <td>🟊🟊🟊🟊🟊</td>
-          </tr>
-          <tr>
-            <td>Content Marketing</td>
-            <td> 🟊🟊🟊🟊🟊</td>
-          </tr>
-</table>
-<hr>
-  <a href="hobbies.html">My hobbies</a>
-  <a href="contact-me.html">Contact me</a>
+    <table cellspacing=10>
+      <tr>
+        <td>Inbound Marketing</td>
+        <td>⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>SEM </td>
+        <td>⭐️⭐️⭐️⭐️</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="Contact-me.html">Contact me</a>
 </body>
 
 </html>
